@@ -36,7 +36,7 @@ import de.adorsys.psd2.xs2a.spi.domain.authorisation.SpiAuthorisationStatus;
 import de.adorsys.psd2.xs2a.spi.domain.authorisation.SpiPsuAuthorisationResponse;
 import de.adorsys.psd2.xs2a.spi.domain.authorisation.SpiScaConfirmation;
 import de.adorsys.psd2.xs2a.spi.domain.payment.response.SpiPaymentCancellationResponse;
-import de.adorsys.psd2.xs2a.spi.domain.payment.response.SpiPaymentResponse;
+import de.adorsys.psd2.xs2a.spi.domain.payment.response.SpiPaymentExecutionResponse;
 import de.adorsys.psd2.xs2a.spi.domain.response.SpiResponse;
 import de.adorsys.psd2.xs2a.spi.service.PaymentCancellationSpi;
 import de.adorsys.psd2.xs2a.spi.service.SpiPayment;
@@ -125,20 +125,20 @@ public class PaymentCancellationSpiImpl extends AbstractAuthorisationSpi<SpiPaym
     }
 
     @Override
-    public @NotNull SpiResponse<SpiPaymentResponse> verifyScaAuthorisationAndCancelPaymentWithResponse(@NotNull SpiContextData contextData,
-                                                                                           @NotNull SpiScaConfirmation spiScaConfirmation,
-                                                                                           @NotNull SpiPayment payment,
-                                                                                           @NotNull SpiAspspConsentDataProvider aspspConsentDataProvider) {
+    public @NotNull SpiResponse<SpiPaymentExecutionResponse> verifyScaAuthorisationAndCancelPaymentWithResponse(@NotNull SpiContextData contextData,
+                                                                                                                @NotNull SpiScaConfirmation spiScaConfirmation,
+                                                                                                                @NotNull SpiPayment payment,
+                                                                                                                @NotNull SpiAspspConsentDataProvider aspspConsentDataProvider) {
         try {
             SCAPaymentResponseTO sca = getSCAConsentResponse(aspspConsentDataProvider, true);
             authRequestInterceptor.setAccessToken(sca.getBearerToken().getAccess_token());
 
             ResponseEntity<SCAPaymentResponseTO> response = paymentRestClient.authorizeCancelPayment(sca.getPaymentId(), sca.getAuthorisationId(), spiScaConfirmation.getTanNumber());
             return response.getStatusCode() == HttpStatus.OK
-                           ? SpiResponse.<SpiPaymentResponse>builder()
-                                     .payload(new SpiPaymentResponse(SpiAuthorisationStatus.SUCCESS))
+                           ? SpiResponse.<SpiPaymentExecutionResponse>builder()
+                                     .payload(new SpiPaymentExecutionResponse(SpiAuthorisationStatus.SUCCESS))
                                      .build()
-                           : SpiResponse.<SpiPaymentResponse>builder()
+                           : SpiResponse.<SpiPaymentExecutionResponse>builder()
                                      .error(new TppMessage(MessageErrorCode.UNAUTHORIZED_CANCELLATION))
                                      .build();
         } catch (FeignException feignException) {
@@ -147,12 +147,12 @@ public class PaymentCancellationSpiImpl extends AbstractAuthorisationSpi<SpiPaym
 
             String errorCode = feignExceptionReader.getErrorCode(feignException);
             if (errorCode.equals(ATTEMPT_FAILURE)) {
-                return SpiResponse.<SpiPaymentResponse>builder()
-                               .payload(new SpiPaymentResponse(SpiAuthorisationStatus.ATTEMPT_FAILURE))
+                return SpiResponse.<SpiPaymentExecutionResponse>builder()
+                               .payload(new SpiPaymentExecutionResponse(SpiAuthorisationStatus.ATTEMPT_FAILURE))
                                .error(FeignExceptionHandler.getFailureMessage(feignException, MessageErrorCode.PSU_CREDENTIALS_INVALID, devMessage))
                                .build();
             }
-            return SpiResponse.<SpiPaymentResponse>builder()
+            return SpiResponse.<SpiPaymentExecutionResponse>builder()
                            .error(new TppMessage(MessageErrorCode.PSU_CREDENTIALS_INVALID))
                            .build();
         }
